tests/rosetta/transpiler/C/best-shuffle.error
compile failed: exit status 1: /tmp/ctranspile1821950480/best-shuffle.mochi.c: In function ‘_mem’:
/tmp/ctranspile1821950480/best-shuffle.mochi.c:55:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   55 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1821950480/best-shuffle.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1821950480/best-shuffle.mochi.c: In function ‘shuffleChars’:
/tmp/ctranspile1821950480/best-shuffle.mochi.c:104:56: warning: initialization of ‘const char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  104 |     return shuffleChars_len = 2, (const char*[]){ res, sd };
      |                                                        ^~
/tmp/ctranspile1821950480/best-shuffle.mochi.c:104:56: note: (near initialization for ‘(anonymous)[1]’)
/tmp/ctranspile1821950480/best-shuffle.mochi.c:104:32: warning: returning ‘const char **’ from a function with incompatible return type ‘int *’ [-Wincompatible-pointer-types]
  104 |     return shuffleChars_len = 2, (const char*[]){ res, sd };
      |                                ^
/tmp/ctranspile1821950480/best-shuffle.mochi.c: In function ‘bestShuffle’:
/tmp/ctranspile1821950480/best-shuffle.mochi.c:115:16: warning: implicit declaration of function ‘len’; did you mean ‘mblen’? [-Wimplicit-function-declaration]
  115 |     while (i < len(t)) {
      |                ^~~
      |                mblen
/tmp/ctranspile1821950480/best-shuffle.mochi.c:116:57: warning: passing argument 1 of ‘_substring’ makes pointer from integer without a cast [-Wint-conversion]
  116 |         arr = list_append_str(arr, &arr_len, _substring(t, i, i + 1));
      |                                                         ^
      |                                                         |
      |                                                         int
/tmp/ctranspile1821950480/best-shuffle.mochi.c:59:43: note: expected ‘const char *’ but argument is of type ‘int’
   59 | static const char* _substring(const char *s, int start, int end) {
      |                               ~~~~~~~~~~~~^
/tmp/ctranspile1821950480/best-shuffle.mochi.c:147:55: warning: initialization of ‘const char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  147 |     return bestShuffle_len = 3, (const char*[]){ out, sd, count };
      |                                                       ^~
/tmp/ctranspile1821950480/best-shuffle.mochi.c:147:55: note: (near initialization for ‘(anonymous)[1]’)
/tmp/ctranspile1821950480/best-shuffle.mochi.c:147:59: warning: initialization of ‘const char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  147 |     return bestShuffle_len = 3, (const char*[]){ out, sd, count };
      |                                                           ^~~~~
/tmp/ctranspile1821950480/best-shuffle.mochi.c:147:59: note: (near initialization for ‘(anonymous)[2]’)
/tmp/ctranspile1821950480/best-shuffle.mochi.c:147:31: warning: returning ‘const char **’ from a function with incompatible return type ‘int *’ [-Wincompatible-pointer-types]
  147 |     return bestShuffle_len = 3, (const char*[]){ out, sd, count };
      |                               ^
/tmp/ctranspile1821950480/best-shuffle.mochi.c: In function ‘user_main’:
/tmp/ctranspile1821950480/best-shuffle.mochi.c:161:92: warning: passing argument 2 of ‘str_concat’ makes pointer from integer without a cast [-Wint-conversion]
  161 |         puts(str_concat(str_concat(str_concat(str_concat(str_concat(ts[(int)(i)], " -> "), shuf), " ("), str_int(cnt)), ")"));
      |                                                                                            ^~~~
      |                                                                                            |
      |                                                                                            int
/tmp/ctranspile1821950480/best-shuffle.mochi.c:10:52: note: expected ‘const char *’ but argument is of type ‘int’
   10 | static char* str_concat(const char *a, const char *b) {
      |                                        ~~~~~~~~~~~~^
/usr/bin/ld: /tmp/ccYqI4rO.o: in function `bestShuffle':
best-shuffle.mochi.c:(.text+0x60a): undefined reference to `len'
collect2: error: ld returned 1 exit status

