tests/rosetta/transpiler/C/best-shuffle.c
// Generated by Mochi 0.10.32 on 2025-07-31 12:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t shuffleChars_len;
size_t bestShuffle_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

int nextRand(int seed);
int * shuffleChars(const char* s, int seed);
int * bestShuffle(const char* s, int seed);
int user_main();
int main(void);

int nextRand(int seed) {
    return ((seed * 1664525LL) + 1013904223LL) % 2147483647LL;
}

int * shuffleChars(const char* s, int seed) {
    const char* *chars = NULL;
    size_t chars_len = 0;
    int i = 0LL;
    while (i < strlen(s)) {
        chars = list_append_str(chars, &chars_len, _substring(s, i, i + 1LL));
        i = i + 1LL;
    }
    int sd = seed;
    int idx = chars_len - 1LL;
    while (idx > 0LL) {
        sd = nextRand(sd);
        int j = sd % (idx + 1LL);
        const char* tmp = chars[(int)(idx)];
        chars[(int)(idx)] = chars[(int)(j)];
        chars[(int)(j)] = tmp;
        idx = idx - 1LL;
    }
    const char* res = "";
    i = 0LL;
    while (i < chars_len) {
        res = str_concat(res, chars[(int)(i)]);
        i = i + 1LL;
    }
    return shuffleChars_len = 2, (const char*[]){ res, sd };
}

int * bestShuffle(const char* s, int seed) {
    int *r = shuffleChars(s, seed);
    size_t r_len = shuffleChars_len;
    int t = r[(int)(0LL)];
    int sd = r[(int)(1LL)];
    const char* *arr = NULL;
    size_t arr_len = 0;
    int i = 0LL;
    while (i < len(t)) {
        arr = list_append_str(arr, &arr_len, _substring(t, i, i + 1LL));
        i = i + 1LL;
    }
    i = 0LL;
    while (i < arr_len) {
        int j = 0LL;
        while (j < arr_len) {
            if (((i != j) && (strcmp(arr[(int)(i)], _substring(s, j, j + 1LL)) != 0)) && (strcmp(arr[(int)(j)], _substring(s, i, i + 1LL)) != 0)) {
                const char* tmp = arr[(int)(i)];
                arr[(int)(i)] = arr[(int)(j)];
                arr[(int)(j)] = tmp;
                break;
            }
            j = j + 1LL;
        }
        i = i + 1LL;
    }
    int count = 0LL;
    i = 0LL;
    while (i < arr_len) {
        if (strcmp(arr[(int)(i)], _substring(s, i, i + 1LL)) == 0) {
            count = count + 1LL;
        }
        i = i + 1LL;
    }
    const char* out = "";
    i = 0LL;
    while (i < arr_len) {
        out = str_concat(out, arr[(int)(i)]);
        i = i + 1LL;
    }
    return bestShuffle_len = 3, (const char*[]){ out, sd, count };
}

int user_main() {
    const char* ts[6] = {"abracadabra", "seesaw", "elk", "grrrrrr", "up", "a"};
    size_t ts_len = 6;
    int seed = 1LL;
    int i = 0LL;
    while (i < 6LL) {
        int *r = bestShuffle(ts[(int)(i)], seed);
        size_t r_len = bestShuffle_len;
        int shuf = r[(int)(0LL)];
        seed = r[(int)(1LL)];
        int cnt = r[(int)(2LL)];
        puts(str_concat(str_concat(str_concat(str_concat(str_concat(ts[(int)(i)], " -> "), shuf), " ("), str_int(cnt)), ")"));
        i = i + 1LL;
    }
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
